crates/normalize-cfg/tests/snapshots/python_cfg__python_branch.snap
---
source: crates/normalize-cfg/tests/python_cfg.rs
expression: mermaid
---
flowchart TD
    b0{"Branch<br/>lines 1-2"}
    b1(["exit"])
    b2["Statement<br/>line 3"]
    b3["Statement<br/>line 5"]
    b4["Statement<br/>lines 4-5"]

    b0 -->|"true"| b2
    b0 -->|"false"| b4
    b2 --> b3
    b4 --> b3
    b3 --> b1
