crates/normalize-cfg/tests/snapshots/python_cfg__python_early_return.snap
---
source: crates/normalize-cfg/tests/python_cfg.rs
expression: mermaid
---
flowchart TD
    b0{"Branch<br/>lines 1-2"}
    b1(["exit"])
    b2["Statement<br/>line 3"]
    b3{"Branch<br/>lines 3-4"}
    b4["Statement<br/>line 5"]
    b5["Statement<br/>lines 5-6"]

    b0 -->|"true"| b2
    b0 -->|"false"| b3
    b2 --> b3
    b3 -->|"true"| b4
    b3 -->|"false"| b5
    b4 --> b5
    b5 -->|"return"| b1
