crates/normalize-cfg/tests/snapshots/python_cfg__python_linear.snap
---
source: crates/normalize-cfg/tests/python_cfg.rs
expression: mermaid
---
flowchart TD
    b0(["entry"])
    b1(["exit"])

    b0 -->|"return"| b1
